# nimby-doc

./: .gitignore  GC-GUIDE-ANNOUNCE  IKARUS-DOC-ANNOUNCE  Makefile.am  Makefile.in  NEKO-DOC-ANNOUNCE  R6RS-DOC-ANNOUNCE  README  SRFI-DOC-ANNOUNCE  aclocal.m4  autogen.sh  configure.ac  configure.sh  prepare.sh
appendices/: Makefile.am  ex.texi  sa.texi  uuid.texiinc
appendices/srfi/: Makefile  and-let-star.texi  args-fold.texi  case-lambda.texi  cond-expand.texiinc  eager-comp.texi  environment-variables.texiinc  error-reporting.texiinc  general-cond.texiinc  index.texi  index.texiinc  let-values.texi  lightweight-testing.texiinc  list.texiinc  parameters.texi  random.texiinc  rec.texiinc  receive.texi  shared-structures.texi  srfi.texi  texinfo-macros.texi  time.texi  vector.texi
configuration/: project.make
infrastructure/: develstuff.make  overview-using.texiinc
src/: Makefile.am  boehm-gc.texi  chicken-egg-coops.texi  chicken-internals.texi  coops.texi  expat.texi  gc.texi  gpl-2.0.texi  igraph.texi  ikarus.texi  lgpl-2.1.texi  macros.texi  neko.texi  r6rs-lib.texi  r6rs.texi  srfi.texi  ypsilon.texi
src/srfi/: case-lambda.texi  eager-comp.texi  error-reporting.texi  index.texi  lazy-evaluation.texi  lightweight-testing.texi  records.texi  specialize-procedures.texi  srfi.texi  streams.texi  string-ports.texi  strings.texi  texinfo-macros.texi  vector.texi
