## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS	= foreign
EXTRA_DIST		= README

## --------------------------------------------------------------------

EXTRA_DIST		+= \
	src/fdl-1.3.texi		\
	src/lgpl-2.1.texi		\
	src/gpl-2.0.texi

AM_MAKEINFOFLAGS	= --no-split

info_TEXINFOS	= \
	src/boehm-gc.texi		\
	src/expat.texi			\
	src/igraph.texi			\
	src/ikarus.texi			\
	src/neko.texi			\
	src/r6rs.texi			\
	src/r6rs-lib.texi		\
	src/ypsilon.texi		\
	src/srfi/srfi.texi		\
	src/coops.texi

src_coops_TEXINFOS		= src/macros.texi
src_chicken_internals_TEXINFOS	= src/macros.texi

## --------------------------------------------------------------------

EXTRA_DIST		+= \
	appendices/uuid.texi			\
	appendices/zlib.texi			\
	appendices/bzlib.texi			\
	appendices/ex.texi			\
	appendices/sa.texi

src_srfi_srfi_TEXINFOS	= \
	src/srfi/index.texi			\
	src/srfi/texinfo-macros.texi		\
	\
	src/srfi/and-let-star.texi		\
	src/srfi/args-fold.texi			\
	src/srfi/case-lambda.texi		\
	src/srfi/cond-expand.texi		\
	src/srfi/eager-comp.texi		\
	src/srfi/environment-variables.texi	\
	src/srfi/error-reporting.texi		\
	src/srfi/general-cond.texi		\
	src/srfi/let-values.texi		\
	src/srfi/lightweight-testing.texi	\
	src/srfi/list.texi			\
	src/srfi/parameters.texi		\
	src/srfi/random.texi			\
	src/srfi/receive.texi			\
	src/srfi/records.texi			\
	src/srfi/rec.texi			\
	src/srfi/shared-structures.texi		\
	src/srfi/specialize-procedures.texi	\
	src/srfi/streams.texi			\
	src/srfi/string-ports.texi		\
	src/srfi/strings.texi			\
	src/srfi/time.texi			\
	src/srfi/vector.texi

### end of file
