dnl @configure_input@
dnl

AC_INIT([nimby-doc],[1.0.1],[marco.maggi-ipsu@poste.it])
DS_BEGIN([./src/boehm-gc.texi])
DS_EXCLUDE_SECTION([DOC_RULES])
DS_EXCLUDE_SECTION([DEV_RULES])
DS_EXCLUDE_SECTION([METASCRIPTS])
DS_EXCLUDE_SECTION([PKGCONFIG])
DS_EXCLUDE_SECTION([AUTOCONF])
DS_EXCLUDE_SECTION([CONFIG_INSPECTION_SCRIPT])

DS_CONFIG_FILE_SLACKWARE_BIN_DESC
DS_END

dnl end of file
