dnl @configure_input@
dnl

AC_PREREQ([2.68])
AC_INIT([nimby-doc],[1.1.0],[marco.maggi-ipsu@poste.it])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_MACRO_DIR([autotools])
AC_CONFIG_AUX_DIR([autotools])
AM_INIT_AUTOMAKE([foreign dist-xz no-dist-gzip subdir-objects])
AM_MAINTAINER_MODE

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

dnl end of file
