dnl @configure_input@
dnl

AC_PREREQ([2.68])
MMUX_PKG_VERSIONS([1],[2],[0],[],[noarch])
AC_INIT([nimby-doc],MMUX_PACKAGE_VERSION,[marco.maggi-ipsu@poste.it])
MMUX_INIT

AC_CONFIG_SRCDIR([src/])
AC_CONFIG_MACRO_DIR([meta/autotools])
AC_CONFIG_AUX_DIR([meta/autotools])
AM_INIT_AUTOMAKE([foreign dist-xz no-dist-gzip subdir-objects])
AM_MAINTAINER_MODE

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P

AC_CONFIG_FILES([Makefile])
MMUX_OUTPUT
AC_OUTPUT

dnl end of file
