# Makefile.am --

EXTRA_DIST	=	\
	uuid.texiinc		\
	zlib.texiinc		\
	bzlib.texiinc		\
	ex.texiinc		\
	Makefile.am		\
	sa.texiinc		\
	\
	srfi/and-let-star.texiinc		\
	srfi/args-fold.texiinc			\
	srfi/case-lambda.texiinc		\
	srfi/cond-expand.texiinc		\
	srfi/eager-comp.texiinc			\
	srfi/environment-variables.texiinc	\
	srfi/error-reporting.texiinc		\
	srfi/general-cond.texiinc		\
	srfi/index.texiinc			\
	srfi/let-values.texiinc			\
	srfi/lightweight-testing.texiinc	\
	srfi/list.texiinc			\
	srfi/Makefile				\
	srfi/parameters.texiinc			\
	srfi/random.texiinc			\
	srfi/receive.texiinc			\
	srfi/records.texiinc			\
	srfi/rec.texiinc			\
	srfi/shared-structures.texiinc		\
	srfi/specialize-procedures.texiinc	\
	srfi/srfi.texi				\
	srfi/streams.texiinc			\
	srfi/string-ports.texiinc		\
	srfi/strings.texiinc			\
	srfi/texinfo-macros.texiinc		\
	srfi/time.texiinc			\
	srfi/vector.texiinc

### end of file
